--- a/client/src/index.css
+++ b/client/src/index.css
@@ -562,7 +562,7 @@ aside:hover::-webkit-scrollbar-thumb:active {
 }
 
 .dark .ql-toolbar {
-  background: #8b919b !important;
+  background: #111827 !important;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
 }
 
